Header part markup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 
 </head>
 <body>
+
+    <section id="container">
+        <header> 
+            <div id="logo">
+                <h2>TIM WILSON</h2>
+                <h4>GRAPHIC & WEB DESIGNER</h4>
+            </div>
+            <ul class="socialicons">
+                <li class="socials-text">Social Profiles</li>
+                <li><a href="#" class="transition">&#x2a;</a></li>
+                <li><a href="#" class="transition">&#x2c;</a></li>
+                <li><a href="#" class="transition">&#x2d;</a></li>
+                <li><a href="#" class="transition">&#x31;</a></li>
+            </ul>
+        </header>
     
 
 
